# gash

./: README.md  pyproject.toml
gash/: __main__.py  _job.py  _model.py  _step.py  _workflow.py
tests/: conftest.py  test_workflow.py
